# evm

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
evm_common/: .clang-format  CMakeLists.txt  doxygen.conf
evm_common/inc/evm/: instruction.h  loading.h  primitive.h
evm_common/src/: instruction.cpp  loading.cpp  primitive.cpp
rust/: Cargo.toml
rust/evm_common/: Cargo.toml
rust/evm_common/src/: lib.rs  loading.rs
tests/: CMakeLists.txt  loading_test.cpp  primitive_tests.cpp
